# pybind11-noRTTI-test

./: .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.rst  SECURITY.md  noxfile.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  configure.yml  docs-link.yml  pip.yml  reusable-standard.yml  upstream.yml
docs/: Doxyfile  Makefile  basics.rst  benchmark.py  benchmark.rst  changelog.md  classes.rst  compiling.rst  conf.py  faq.rst  installing.rst  limitations.rst  reference.rst  release.rst  upgrade.rst
docs/advanced/: classes.rst  deprecated.rst  embedding.rst  exceptions.rst  functions.rst  misc.rst  smart_ptrs.rst
docs/advanced/cast/: chrono.rst  custom.rst  eigen.rst  functional.rst  index.rst  overview.rst  stl.rst  strings.rst
docs/advanced/pycpp/: index.rst  numpy.rst  object.rst  utilities.rst
docs/cmake/: index.rst
include/pybind11/: attr.h  buffer_info.h  cast.h  chrono.h  complex.h  functional.h  iostream.h  numpy.h  operators.h  options.h  pybind11.h  pytypes.h  stl.h  stl_bind.h
include/pybind11/conduit/: pybind11_conduit_v1.h  pybind11_platform_abi_id.h  wrap_include_python_h.h
include/pybind11/detail/: class.h  common.h  descr.h  init.h  internals.h  type_caster_base.h  typeid.h
include/pybind11/eigen/: common.h  matrix.h
include/pybind23/: attr.h  buffer_info.h  cast.h  chrono.h  common.h  complex.h  critical_section.h  eigen.h  embed.h  eval.h  functional.h  gil.h  gil_safe_call_once.h  gil_simple.h  iostream.h  native_enum.h  numpy.h  operators.h  options.h  pybind11.h  pytypes.h  stl.h  stl_bind.h  subinterpreter.h  trampoline_self_life_support.h  type_caster_pyobject_ptr.h  typing.h  warnings.h
include/pybind23/conduit/: README.txt  pybind11_conduit_v1.h  pybind11_platform_abi_id.h  wrap_include_python_h.h
include/pybind23/detail/: class.h  common.h  cpp_conduit.h  descr.h  dynamic_caster.h  dynamic_raw_ptr_cast_if_possible.h  exception_translation.h  function_record_pyobject.h  init.h  internals.h  native_enum_data.h  pybind11_namespace_macros.h  struct_smart_holder.h  type_caster_base.h  type_id_no_rtti.h  typeid.h  using_smart_holder.h  value_and_holder.h
include/pybind23/eigen/: common.h  matrix.h  tensor.h
include/pybind23/stl/: filesystem.h
pybind11/: setup_helpers.py
pybind23/: __init__.py  __main__.py  _version.py  commands.py  setup_helpers.py
tests/: CMakeLists.txt  conftest.py  constructor_stats.h  cross_module_gil_utils.cpp  cross_module_interleaved_error_already_set.cpp  eigen_tensor_avoid_stl_array.cpp  exo_planet_c_api.cpp  exo_planet_pybind23.cpp  home_planet_very_lonely_traveler.cpp  local_bindings.h  mod_per_interpreter_gil.cpp  mod_shared_interpreter_gil.cpp  pybind23_cross_module_tests.cpp  pybind23_tests.cpp  pybind23_tests.h  pyproject.toml  test_buffers.cpp  test_builtin_casters.cpp  test_builtin_casters.py  test_callbacks.py  test_class.cpp  test_class_sh_trampoline_basic.cpp  test_class_sh_trampoline_shared_ptr_cpp_arg.cpp  test_class_sh_trampoline_unique_ptr.cpp  test_class_sh_virtual_py_cpp_mix.cpp  test_const_name.cpp  test_constants_and_functions.cpp  test_copy_move.cpp  test_cpp_conduit.cpp  test_cpp_conduit.py  test_custom_type_casters.cpp  test_docs_advanced_cast_custom.cpp  test_eigen_matrix.cpp  test_eigen_tensor.cpp  test_eigen_tensor.inl  test_enum.cpp  test_exceptions.cpp  test_exceptions.h  test_factory_constructors.cpp  test_gil_scoped.cpp  (+21 more)
tests/extra_python_package/: test_files.py
tests/extra_setuptools/: test_setuphelper.py
tests/pure_cpp/: smart_holder_poc.h
tests/test_cmake_build/: CMakeLists.txt  embed.cpp  main.cpp
tests/test_cmake_build/installed_embed/: CMakeLists.txt
tests/test_cmake_build/installed_function/: CMakeLists.txt
tests/test_cmake_build/installed_target/: CMakeLists.txt
tests/test_cmake_build/subdirectory_embed/: CMakeLists.txt
tests/test_cmake_build/subdirectory_function/: CMakeLists.txt
tests/test_cmake_build/subdirectory_target/: CMakeLists.txt
tests/test_cross_module_rtti/: bindings.cpp  catch.cpp
tests/test_embed/: CMakeLists.txt  catch.cpp  external_module.cpp  test_interpreter.cpp  test_subinterpreter.cpp
tools/: FindPythonLibsNew.cmake  check-style.sh  make_changelog.py  make_global.py  pybind23Common.cmake  pybind23Config.cmake.in  pybind23GuessPythonExtSuffix.cmake  pybind23NewTools.cmake  pybind23Tools.cmake  test-pybind11GuessPythonExtSuffix.cmake
